--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,12 @@
-name=Sub-Spec-Clause-drops_privilege
-version=0.02
+name=Perinci-Sub-property-drops_privilege
+version=0.03
 author=Steven Haryanto <stevenharyanto@gmail.com>
 license=Perl_5
 copyright_holder=Steven Haryanto
 
 [MetaResources]
-homepage=http://search.cpan.org/dist/Sub-Spec-Clause-drops_privilege/
-repository=http://github.com/sharyanto/perl-Sub-Spec-Clause-drops_privilege
+homepage=http://search.cpan.org/dist/Perinci-Sub-property-drops_privilege/
+repository=http://github.com/sharyanto/perl-Perinci-Sub-property-drops_privilege
 
 [@Filter]
 bundle=@Classic
@@ -35,9 +35,8 @@ install_command=cpanm -n .
 Test::More=0.96
 ; for runtime
 perl=5.010000
-; speficy which version of spec we're following
-Sub::Spec=1.0.2
-Sub::Spec::Wrapper=0
+Perinci=0
+Perinci::Sub::Wrapper=0
 
 [Run::Release]
 ;notexist_fatal = 0
