--- a/dist.ini
+++ b/dist.ini
@@ -36,7 +36,8 @@ Test::More=0.96
 ; for runtime
 perl=5.010000
 Perinci=0
-Perinci::Sub::Wrapper=0
+;already required by Perinci, but we require specific version
+Perinci::Sub::Wrapper=0.08
 
 [Run::Release]
 ;notexist_fatal = 0
