--- a/dist.ini
+++ b/dist.ini
@@ -35,7 +35,7 @@ install_command=cpanm -n .
 Test::More=0.96
 ; for runtime
 perl=5.010000
-Perinci=0
+Perinci::Util=0
 ;already required by Perinci, but we require specific version
 Perinci::Sub::Wrapper=0.08
 
