--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,6 @@
-name=Perinci-Sub-property-drops_privilege
 version=0.03
+
+name=Perinci-Sub-property-drops_privilege
 author=Steven Haryanto <stevenharyanto@gmail.com>
 license=Perl_5
 copyright_holder=Steven Haryanto
@@ -8,37 +9,13 @@ copyright_holder=Steven Haryanto
 homepage=http://search.cpan.org/dist/Perinci-Sub-property-drops_privilege/
 repository=http://github.com/sharyanto/perl-Perinci-Sub-property-drops_privilege
 
-[@Filter]
-bundle=@Classic
-remove=MakeMaker
-remove=PodVersion
-remove=PkgVersion
+[@SHARYANTO]
 
-[OurPkgVersion]
-
-[ModuleBuild]
-
-[ReadmeFromPod]
-
-[PodWeaver]
-
-[CheckChangeLog]
-
-[Test::Compile]
-
-[InstallRelease]
-install_command=cpanm -n .
-
-;[@Git]
-[Prereqs]
-; for testing
+[Prereqs / TestRequires]
 Test::More=0.96
-; for runtime
+
+[Prereqs]
 perl=5.010000
 Perinci::Util=0
 ;already required by Perinci, but we require specific version
-Perinci::Sub::Wrapper=0.08
-
-[Run::Release]
-;notexist_fatal = 0
-run=archive-perl-release %s
+Perinci::Sub::Wrapper=0.24
