--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.04
+version=0.05
 
 name=Perinci-Sub-Property-drops_privilege
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -12,10 +12,11 @@ repository=http://github.com/sharyanto/perl-Perinci-Sub-Property-drops_privilege
 [@SHARYANTO]
 
 [Prereqs / TestRequires]
+;!lint-prereqs assume-used # force version
+Perinci::Sub::Wrapper=0.30
 Test::More=0.96
+Test::Perinci::Sub::Wrapper=0
 
 [Prereqs]
 perl=5.010000
 Perinci::Util=0
-;already required by Perinci, but we require specific version
-Perinci::Sub::Wrapper=0.24
