dist: dzil: Force @SHARYANTO version (inspired by chorny)

--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ homepage=http://search.cpan.org/dist/Perinci-Sub-Property-drops_privilege/
 repository=http://github.com/sharyanto/perl-Perinci-Sub-Property-drops_privilege
 
 [@SHARYANTO]
+:version=0.09
 
 [Prereqs / TestRequires]
 ;!lint-prereqs assume-used # force version
