[dzil] Update syntax of lint-prereqs directive (-> lint_prereqs) to be more IOD-compliant

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ name=Perinci-Sub-Property-drops_privilege
 :version=0.23
 
 [Prereqs / TestRequires]
-;!lint-prereqs assume-used # force version
+;!lint_prereqs assume-used # force version
 Perinci::Sub::Wrapper=0.51
 Test::More=0.98
 Test::Perinci::Sub::Wrapper=0
