[dist] Re-pass lint-prereqs (core modules must now be listed)

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,7 @@ name=Perinci-Sub-Property-drops_privilege
 :version=0.23
 
 [Prereqs / TestRequires]
+List::Util=0
 ;!lint_prereqs assume-used # force version
 Perinci::Sub::Wrapper=0.51
 Test::More=0.98
@@ -13,4 +14,7 @@ Test::Perinci::Sub::Wrapper=0
 
 [Prereqs]
 perl=5.010001
+strict=0
+warnings=0
 Perinci::Sub::PropertyUtil=0
+
